--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,7 +305,7 @@ button:focus {
 =============================*/
 
 .header-bg-img {
-    background-image: url(../images/header-bg.jpg);
+    background-image: url(../images/Coding.jpg);
     position: relative;
     background-size: cover;
     background-position: center center;
